# FloraIdent

./: .gitignore  CMakeLists.txt  build.sh
cmake/: FindFFTW.cmake
include/: common.h  flora_ident_app.h  flora_ident_config.h  flora_ident_config.h.in  mainwindow.h  my_widgets.h  obj_ident_app.h  settings_dialog.h
include/Core/: classifier.h  color_hist.h  common.h  flora_ident.h  fourier_hist.h  gist.h  hough_hist.h  img_descriptor.h  img_feature.h  knn.h  svm.h
include/Eigen/src/Core/: MapBase.h
include/clany/: eigen.hpp  file_operation.hpp  traits.hpp
include/core/: flora_ident.h  gist.h  hough_hist.h  img_descriptor.h  img_feature.h  obj_ident.h  svm.h
src/: CMakeLists.txt  flora_ident_app.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  my_widgets.cpp  obj_ident_app.cpp  settings_dialog.cpp  settings_dialog.ui
src/Core/: color_hist.cpp  flora_ident.cpp  fourier_hist.cpp  gist.cpp  hough_hist.cpp  img_descriptor.cpp  libsvm.cpp  svm.cpp
src/core/: color_hist.cpp  dist_learning.cpp  flora_ident.cpp  gist.cpp  hough_hist.cpp  img_descriptor.cpp  knn.cpp  obj_ident.cpp  svm.cpp
